add get stores and get store by ID

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-
-
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -17,3 +15,4 @@ FIREBASE_MEASUREMENT_ID=G-ZGGZ69TGBV
 FIREBASE_PROJECT_ID=coffeproject-7a21e
 NODEMAILER_USER=erzabegu3@gmail.com
 NODEMAILER_PASSWORDS=lhczuhsjmtbcrlcu
+PORT=4000
