--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^12.6.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "stripe": "^17.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
